--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,9 @@
 
 </html>
 
-body {
+body 
+{
+  
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
